--- a/css/style.css
+++ b/css/style.css
@@ -88,40 +88,43 @@ hr{
 }
 
 .btn {
-  background: black;
-  background-image: -webkit-linear-gradient(top, #637d8f, #94c3e0);
-  background-image: -moz-linear-gradient(top, #637d8f, #94c3e0);
-  background-image: -ms-linear-gradient(top, #637d8f, #94c3e0);
-  background-image: -o-linear-gradient(top, #637d8f, #94c3e0);
-  background-image: linear-gradient(to bottom, #637d8f, #94c3e0);
-  -webkit-border-radius: 15;
-  -moz-border-radius: 15;
-  border-radius: 15px;
-  text-shadow: 5px 7px 4px #666666;
-  -webkit-box-shadow: 3px 6px 3px #666666;
-  -moz-box-shadow: 3px 6px 3px #666666;
-  box-shadow: 3px 6px 3px #666666;
-  font-family: 'Nunito', sans-serif;
-  color: black;
-  font-size: 27px;
-  padding: 8px;
-  text-decoration: none;
-  width: 170px;
-  height: 40px;
-  text-align: center;
-  left: 613px;
-  position: relative;
-  margin: 42px;
+	background: black;
+	background-image: -webkit-linear-gradient(top, #2d3942, #000000);
+	background-image: -moz-linear-gradient(top, #2d3942, #000000);
+	background-image: -ms-linear-gradient(top, #2d3942, #000000);
+	background-image: -o-linear-gradient(top, #2d3942, #000000);
+	background-image: linear-gradient(to bottom, #2d3942, #000000);
+	-webkit-border-radius: 15;
+	-moz-border-radius: 15;
+	border-radius: 15px;
+	text-shadow: 5px 7px 4px #666666;
+	-webkit-box-shadow: 3px 6px 3px #666666;
+	-moz-box-shadow: 3px 6px 3px #666666;
+	box-shadow: 3px 6px 3px #666666;
+	font-family: 'Nunito', sans-serif;
+	color: black;
+	font-size: 27px;
+	padding: 8px;
+	text-decoration: none;
+	width: 170px;
+	height: 40px;
+	text-align: center;
+	position: relative;
+	margin: 42px;
+	left: 249px;
+	margin: 103px;
+	justify-content: center;
+	display: f;
 }
 
 .btn:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-  text-decoration: none;
+	background: #3cb0fd;
+	background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+	text-decoration: none;
 }
 
 .btn_text{
@@ -132,4 +135,49 @@ hr{
 	background-color: black;
 	width: 100%;
 	height: 300px;
+	display: block;
+	padding: 20px;
 }
+
+
+
+
+
+.image-container {
+	position: relative;
+	/* display: flex;
+	flex-wrap: wrap;
+	justify-content: center; */
+	display: flex;
+	/* justify-content: space-between; */
+	text-align: center;
+	width: 100%;
+	margin-top: 30px;
+    margin-bottom: 230px;
+	justify-content: center;
+  
+}
+   
+  .image {
+	position: relative;
+	width: 100px;
+	height: 100px;
+	margin-bottom: 10px;
+	padding: 20px;
+	margin-left: 100px;
+  }
+  .image-heading {
+	font-size: 18px;
+	margin-bottom: 10px;
+  }
+  .image-details {
+	font-size: 14px;
+  }
+
+  .image img{
+	width: 150px;
+	height: 200px;
+  }
+/* #image1{
+	left: 100px;
+} */
