--- a/css/style.css
+++ b/css/style.css
@@ -5,61 +5,72 @@ body {
     font-family: 'Nunito', sans-serif;
     background-color: #E8FFCE;
 }
+.header{
+	text-align: center;
+
+
+}
 .header img{
 	text-align: center;
 	width: 100%;
 	height: 600px;
 }
     
-.size_control{
-	text-align: left;
+.header_img{
+	position: relative;
+
 }   
 
 .header_text{
 	position: absolute;
-	top: 0px;
-	left: 35%;
+	top: 50%;
+	left: 50%;
+	color: red;
+	transform: translate(-50%, -50%);
+	font-size: 350%;
+	
 
 }
-
-
 
 .header_text h1{
-	color: white;
-	font-size: 800%;
+	text-align: center;
+	margin: 0px;
+	color: rgb(255, 255, 255);
 	font-family: 'Niconne', cursive;
+	text-shadow: 30px 20px 7px #000000;
+}
+.profile{
+	position: relative;
+	margin-left: 0px;
+	padding: 20px;
+}
+.profile_table{
+	margin-left: 40%;
+}
 
-}
-.header_text p{
-	color: red;
+
+.profile_some_information{
+	position: relative;
+	left: 0px;
 }
 
-.my_img{
-	border-radius: 50%; /* Makes the image circular */
-			box-shadow: 5px 2px 15px rgba(0, 0, 0, 1);
+.profile_some_information ul{
+	text-align: left;
 }
-h1{	
-	color: gray;
+.profile_img{
+	padding: 10px;
+	border-radius: 50%; 
+	box-shadow: 5px 2px 15px rgba(0, 0, 0, 1);
 }
 
 hr{
 	border-style: dotted none none;
 	height:0;
 	width: 5%;
-	border-color: black;
+	border-color: rgb(107, 102, 102);
 	border-width: 7px;
-	padding: 2px;
-}
-.profile{
-	text-align: center;
-	margin-left: 400px;
-	padding: 20px;
-}
-.my_name{
-	color: ;
-}
-.my_detials{
-	text-align: left;
+	padding: 10px;
+
 }
 .skills{
 	padding: 20px;
@@ -96,47 +107,37 @@ hr{
 	background-image: linear-gradient(to bottom, #2d3942, #000000);
 	-webkit-border-radius: 15;
 	-moz-border-radius: 15;
-	border-radius: 15px;
-	text-shadow: 5px 7px 4px #666666;
-	-webkit-box-shadow: 3px 6px 3px #666666;
-	-moz-box-shadow: 3px 6px 3px #666666;
-	box-shadow: 3px 6px 3px #666666;
+	border-radius: 20px;
+	text-shadow: 5px 7px 4px #2e2d2d;
+	-webkit-box-shadow: 3px 6px 3px #2e2d2d;
+	-moz-box-shadow: 3px 6px 3px #2e2d2d;
+	box-shadow: 3px 6px 3px #2e2d2d;
 	font-family: 'Nunito', sans-serif;
-	color: black;
+	color: rgb(255, 255, 255);
 	font-size: 27px;
-	padding: 8px;
 	text-decoration: none;
-	width: 170px;
-	height: 40px;
-	text-align: center;
+	width: 200px;
+	height: 50px;
 	position: relative;
-	margin: 42px;
-	left: 249px;
-	margin: 103px;
-	justify-content: center;
-	display: f;
+	margin: auto;
+	margin-bottom: 50px;
+	
 }
 
 .btn:hover {
 	background: #3cb0fd;
-	background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+	background-image: -webkit-linear-gradient(top, #9ea0a1, #2e3032);
+	background-image: -moz-linear-gradient(top, #9ea0a1, #2e3032);
+	background-image: -ms-linear-gradient(top, #9ea0a1, #2e3032);
+	background-image: -o-linear-gradient(top, #9ea0a1, #2e3032);
+	background-image: linear-gradient(to bottom, #9ea0a1, #2e3032);
 	text-decoration: none;
 }
 
 .btn_text{
-	margin-top: 6px;
-}
-
-.footer{
-	background-color: black;
-	width: 100%;
-	height: 300px;
-	display: block;
-	padding: 20px;
+	padding-top: 10px;
+	margin-top: 10px;
+	text-align: center;
 }
 
 
@@ -181,3 +182,31 @@ hr{
 /* #image1{
 	left: 100px;
 } */
+
+.footer {
+	background-color: #040404;
+	color: #fff;
+	padding: 0px;
+	width: 100%;
+	height: 300px;
+  }
+  .footer ul {
+	list-style-type: none;
+	padding: 10px;
+	text-align: center;
+  }
+  .footer li {
+	display: inline-block;
+	padding: 10px;
+	margin-right: 180px;
+  }
+  .footer a {
+	color: #fff;
+	text-decoration: none;
+  }
+.footer p{
+	position: relative; 
+	bottom: 0px;
+	padding-top: 100px;
+
+}
