--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ body {
     font-family: 'Nunito', sans-serif;
     background-color: #E8FFCE;
 }
+h2{
+	color: #001C30;
+}
 .header{
 	text-align: center;
 
@@ -13,7 +16,7 @@ body {
 .header img{
 	text-align: center;
 	width: 100%;
-	height: 600px;
+	height: 500px;
 }
     
 .header_img{
@@ -90,12 +93,19 @@ hr{
 }
 .work_history{
 	margin-top: 170px;
+	margin-bottom: 100px;
 }
 .work_img{
 	width: 30%;
 	float: right;
 	border-radius: 50%; /* Makes the image circular */
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.skill_section table{
+	text-align: left;
+    margin: auto;
+    padding: 20px
 }
 
 .btn {
@@ -146,16 +156,12 @@ hr{
 
 .image-container {
 	position: relative;
-	/* display: flex;
-	flex-wrap: wrap;
-	justify-content: center; */
-	display: flex;
-	/* justify-content: space-between; */
-	text-align: center;
-	width: 100%;
-	margin-top: 30px;
-    margin-bottom: 230px;
-	justify-content: center;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 187px;
   
 }
    
@@ -164,8 +170,7 @@ hr{
 	width: 100px;
 	height: 100px;
 	margin-bottom: 10px;
-	padding: 20px;
-	margin-left: 100px;
+	padding: 70px;
   }
   .image-heading {
 	font-size: 18px;
