--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ hr{
 	color: rgb(255, 255, 255);
 	font-size: 27px;
 	text-decoration: none;
-	width: 200px;
+	width: 250px;
 	height: 50px;
 	position: relative;
 	margin: auto;
@@ -149,9 +149,9 @@ hr{
 	margin-top: 10px;
 	text-align: center;
 }
-
-
-
+.btn_text a{
+	text-decoration: none;
+}
 
 
 .image-container {
@@ -161,7 +161,9 @@ hr{
     text-align: center;
     width: 100%;
     margin-top: 30px;
-    margin-bottom: 187px;
+	background-color: #000000;
+	height: 400px;
+	color: crimson;
   
 }
    
@@ -210,8 +212,75 @@ hr{
 	text-decoration: none;
   }
 .footer p{
-	position: relative; 
-	bottom: 0px;
-	padding-top: 100px;
+	position: relative;
+    bottom: -74px;
+    padding-top: 100px;
+    font-size: 9px;
+}
+
+
+
+
+
+
+.contact_head img{
+	width: 100%; 	
+	height: 200px;
+	position: relative;
+}
+
+.contact_text{
+	position: absolute;
+	left: 50%;
+	top: 10%;
+	color: red;
+	transform: translate(-50%, -50%);
+	
+}
+
+
+
+.send_your_information {
+	width: 100%;
+	margin: 0 auto;
+	padding: 20px;
+}
+
+.send_your_information h1 {
+	margin-bottom: 20px; 
+}
+
+form {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+label {
+	margin-bottom: 5px;
+}
+
+input,
+textarea {
+	margin-bottom: 10px; 
+	padding: 5px; 
+}
+
+button {
+	padding: 10px 20px;
+	background-color: #000000;
+	color: #fff;
+	border: none;
+	cursor: pointer;
+	border-radius: 20px;
+	margin-bottom: 30px;
+	width: 150px;
 
 }
+
+button:hover {
+	background-color: #393939;
+}
+
+
+
